--- a/index.html
+++ b/index.html
@@ -76,6 +76,29 @@
       color: #fff;
       margin-top: 10px;
     }
+    .acadmy_float_logo {
+      position: fixed;
+      bottom: 50px;
+      right: 5px;
+      width: 50px;
+      height: 50px;
+      background-image: url('./accets/imgs/acadmy_logo.jpg');
+      background-size: cover;
+      background-position: center;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: all 0.5s ease;
+      z-index: 1000;
+    }
+    .acadmy_float_logo.clicked {
+      width: 200px;
+      height: 200px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      z-index: 10000;
+    }
     footer {
       background: #222;
       padding: 20px 0;
@@ -105,8 +128,15 @@
     </section>
   </div>
 
+  <div class="acadmy_float_logo"></div>
   <footer>
-    <p>&copy; 2025 أكاديمية الإشراق. جميع الحقوق محفوظة.</p>
+    <p>&copy; Shining Acacdmy جميع الحقوق محفوظة لدي أكاديمية المشرق </p>
   </footer>
 </body>
+<script>
+  const acadmy_float_logo = document.querySelector('.acadmy_float_logo');
+  acadmy_float_logo.addEventListener('click', () => {
+    acadmy_float_logo.classList.toggle('clicked');
+    });
+</script>
 </html>
