--- a/index.html
+++ b/index.html
@@ -3,120 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="accets/imgs/acadmy_logo.jpg"/>
-  <title>محمد غنام</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Arial', sans-serif;
-    }
-    body {
-      background-color: #000;
-      color: white;
-      background-image: url('accets/imgs/bg_image.jpg');
-      background-size: cover;
-      background-position: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      width: 100%;
-      padding-top: 100px; /* زيادة المسافة من أجل الـ header */
-      padding-bottom: 60px; /* لضبط المسافة العلوية للـ footer */
-    }
-    header {
-      background: rgba(0, 0, 0, 0.6);
-      color: #fff;
-      padding: 10px 20px;
-      width: 100%;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1;
-      display: flex;
-      align-items: center;
-      justify-content: space-between; /* لجعل الشعار على اليسار والرابط في المنتصف */
-    }
-    header img {
-      margin-right: 10px;
-      margin-left: 0;
-    }
-    header nav {
-      margin-left: auto;
-      margin-right: auto;
-    }
-    header nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-    }
-    header nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 18px;
-    }
-    .home {
-      width: 100%;
-      max-width: 800px;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-    .home h1 {
-      font-size: 36px;
-      color: #FFD700; 
-      margin-bottom: 20px;
-    }
-    .content p {
-      font-size: 22px;
-      line-height: 1.6;
-      color: #fff;
-      margin-top: 10px;
-    }
-    .acadmy_float_logo {
-      position: fixed;
-      bottom: 50px;
-      right: 5px;
-      width: 50px;
-      height: 50px;
-      background-image: url('./accets/imgs/acadmy_logo.jpg');
-      background-size: cover;
-      background-position: center;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: all 0.5s ease;
-      z-index: 1000;
-    }
-    .acadmy_float_logo.clicked {
-      width: 200px;
-      height: 200px;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      border-radius: 50%;
-      z-index: 10000;
-    }
-    footer {
-      background: #222;
-      padding: 20px 0;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-      left: 0;
-      text-align: center;
-      z-index: 1;
-    }
-  </style>
+  <link rel="icon" href="assets/imgs/acadmy_logo.jpg"/>
+  <title>Shining Academy - أكاديمية الإشراق</title>
+  <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
   <header>
-    <img src="accets/imgs/acadmy_logo.jpg" alt="Shining Acadmy" width="5%">
+    <img src="assets/imgs/acadmy_logo.jpg" alt="Shining Academy" width="5%">
     <nav>
       <ul>
         <li><a href="#">الرئيسية</a></li>
+        <!-- Add more links here -->
       </ul>
     </nav>
   </header>
@@ -124,19 +21,54 @@
   <div class="home">
     <section id="home">
       <h1>مرحبًا بك في أكاديمية الإشراق</h1>
-      <p>نحن في أكاديمية الإشراق نعمل على تقديم أفضل الأساليب التعليمية في مجال تطوير البرمجيات، حيث نهدف إلى مساعدة الطلاب على تنمية مهاراتهم التقنية بشكل متميز.</p>
+      <p>نحن في أكاديمية الإشراق نعمل على تقديم أفضل الأساليب التعليمية في مجال التعليم، حيث نهدف إلى مساعدة الطلاب على تنمية مهاراتهم التقنية بشكل متميز.</p>
     </section>
   </div>
 
+  <div class="contact-section">
+    <h3>تواصل معنا</h3>
+    <div class="contact">
+      <button class="contact-button" id="whatsapp_button">
+        <a href="https://wa.me/201101023681" target="_blank">
+          <img src="assets/imgs/whatsapp.png" alt="Whatsapp Icon">
+          <span>Whatsapp</span>
+        </a>
+      </button>
+      <button class="contact-button" id="telegram_button">
+        <a href="https://t.me/midoghanam?text=السلام%20عليكم%20ورحمة%20الله%20وبركاته" target="_blank">
+          <img src="assets/imgs/telegram.png" alt="Telegram Icon">
+          <span>Telegram</span>
+        </a>
+      </button>
+    </div>
+    <br>
+    <div class="contact">
+      <button class="contact-button" id="facebook_button">
+        <a href="https://www.facebook.com/profile.php?id=61570519450230&mibextid=ZbWKwL" target="_blank">
+          <img src="assets/imgs/facebook.png" alt="Facebook Icon">
+          <span>Facebook</span>
+        </a>
+      </button>
+      <button class="contact-button" id="email_button">
+        <a href="mailto: mohammedghanamprogrammer@hotmail.com" target="_blank">
+          <img src="assets/imgs/gmail.png" alt="Gmail Icon">
+          <span>E-mail</span>
+        </a>
+      </button>
+    </div>
+  </div>
+
   <div class="acadmy_float_logo"></div>
+
   <footer>
-    <p>&copy; Shining Acacdmy جميع الحقوق محفوظة لدي أكاديمية المشرق </p>
+    <p>&copy; Shining Academy - جميع الحقوق محفوظة لدي أكاديمية الإشراق</p>
   </footer>
-</body>
-<script>
-  const acadmy_float_logo = document.querySelector('.acadmy_float_logo');
-  acadmy_float_logo.addEventListener('click', () => {
-    acadmy_float_logo.classList.toggle('clicked');
+
+  <script>
+    const acadmy_float_logo = document.querySelector('.acadmy_float_logo');
+    acadmy_float_logo.addEventListener('click', () => {
+      acadmy_float_logo.classList.toggle('clicked');
     });
-</script>
+  </script>
+</body>
 </html>
