--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <div class="contact-section">
     <h3>تواصل معنا</h3>
     <div class="contact">
-      <button class="contact-button" id="whatsapp_button">
+      <button id="contact-button" class="whatsapp_button">
         <a href="https://wa.me/201101023681" target="_blank">
           <img src="assets/imgs/whatsapp.png" alt="Whatsapp Icon">
           <span>Whatsapp</span>
         </a>
       </button>
-      <button class="contact-button" id="telegram_button">
+      <button id="contact-button" class="telegram_button">
         <a href="https://t.me/midoghanam?text=السلام%20عليكم%20ورحمة%20الله%20وبركاته" target="_blank">
           <img src="assets/imgs/telegram.png" alt="Telegram Icon">
           <span>Telegram</span>
@@ -43,13 +43,13 @@
     </div>
     <br>
     <div class="contact">
-      <button class="contact-button" id="facebook_button">
+      <button id="contact-button" class="facebook_button">
         <a href="https://www.facebook.com/profile.php?id=61570519450230&mibextid=ZbWKwL" target="_blank">
           <img src="assets/imgs/facebook.png" alt="Facebook Icon">
           <span>Facebook</span>
         </a>
       </button>
-      <button class="contact-button" id="email_button">
+      <button id="contact-button" class="email_button">
         <a href="mailto: mohammedghanamprogrammer@hotmail.com" target="_blank">
           <img src="assets/imgs/gmail.png" alt="Gmail Icon">
           <span>E-mail</span>
@@ -64,11 +64,6 @@
     <p>&copy; Shining Academy - جميع الحقوق محفوظة لدي أكاديمية الإشراق</p>
   </footer>
 
-  <script>
-    const acadmy_float_logo = document.querySelector('.acadmy_float_logo');
-    acadmy_float_logo.addEventListener('click', () => {
-      acadmy_float_logo.classList.toggle('clicked');
-    });
-  </script>
+  <script src="assets/js/index.js"></script>
 </body>
 </html>
