--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
   </div>
 
-  <div class="contact-section">
+  <div id="contact-section">
     <h3>تواصل معنا</h3>
     <div class="contact">
       <button id="contact-button" class="whatsapp_button">
