--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
       <p>نحن في أكاديمية الإشراق نعمل على تقديم أفضل الأساليب التعليمية في مجال التعليم، حيث نهدف إلى مساعدة الطلاب على تنمية مهاراتهم التقنية بشكل متميز.</p>
     </section>
   </div>
-
+  <div>
+    <marquee>
+      <div></div>
+    </marquee>
+  </div>
+<div id="subjects"></div>
   <div id="contact-section">
     <h3>تواصل معنا</h3>
     <div class="contact">
