--- a/index.html
+++ b/index.html
@@ -1,70 +1,73 @@
 <!DOCTYPE html>
 <html lang="ar">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="assets/imgs/acadmy_logo.jpg"/>
-  <title>Shining Academy - أكاديمية الإشراق</title>
-  <link rel="stylesheet" href="assets/css/index.css">
-</head>
-<body>
-  <header>
-    <img src="assets/imgs/acadmy_logo.jpg" alt="Shining Academy" width="5%">
-    <nav>
-      <ul>
-        <li><a href="#">الرئيسية</a></li>
-        <!-- Add more links here -->
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/imgs/acadmy_logo.jpg"/>
+    <title>Shining Academy - أكاديمية الإشراق</title>
+    <link rel="stylesheet" href="assets/css/index.css">
+  </head>
+  <body>
+    <header>
+        <img src="assets/imgs/acadmy_logo.jpg" alt="Shining Academy" width="5%">
+        <nav>
+            <ul>
+                <li><a href="#">الرئيسية</a></li>
+                <!-- Add more links here -->
+            </ul>
+        </nav>
+    </header>
 
-  <div class="home">
-    <section id="home">
-      <h1>مرحبًا بك في أكاديمية الإشراق</h1>
-      <p>نحن في أكاديمية الإشراق نعمل على تقديم أفضل الأساليب التعليمية في مجال التعليم، حيث نهدف إلى مساعدة الطلاب على تنمية مهاراتهم التقنية بشكل متميز.</p>
-    </section>
-  </div>
-  <div>
-    <marquee>
-      <div></div>
+    <div class="home">
+        <section id="home">
+            <h1>مرحبًا بك في أكاديمية الإشراق</h1>
+            <p>نحن في أكاديمية الإشراق نعمل على تقديم أفضل الأساليب التعليمية في مجال التعليم، حيث نهدف إلى مساعدة الطلاب على تنمية مهاراتهم التقنية بشكل متميز.</p>
+        </section>
+    </div>
+    <marquee behavior="" direction="">
+      <div id="moved_studies">
+        <div>
+          <img src="assets/imgs/English.png" alt="English">
+          <p>English</p>
+        </div>
+      </div>
     </marquee>
-  </div>
-<div id="subjects"></div>
-  <div id="contact-section">
-    <h3>تواصل معنا</h3>
-    <div class="contact">
-      <button id="contact-button" class="whatsapp_button">
-        <a href="https://wa.me/201101023681" target="_blank">
-          <img src="assets/imgs/whatsapp.png" alt="Whatsapp Icon">
-          <span>Whatsapp</span>
-        </a>
-      </button>
-      <button id="contact-button" class="telegram_button">
-        <a href="https://t.me/midoghanam?text=السلام%20عليكم%20ورحمة%20الله%20وبركاته" target="_blank">
-          <img src="assets/imgs/telegram.png" alt="Telegram Icon">
-          <span>Telegram</span>
-        </a>
-      </button>
+    <div id="contact-section">
+        <h3>تواصل معنا</h3>
+        <div class="contact">
+            <button id="contact-button" class="whatsapp_button">
+                <a href="https://wa.me/201101023681" target="_blank">
+                    <img src="assets/imgs/whatsapp.png" alt="Whatsapp Icon">
+                    <span>Whatsapp</span>
+                </a>
+            </button>
+            <button id="contact-button" class="telegram_button">
+                <a href="https://t.me/midoghanam?text=السلام%20عليكم%20ورحمة%20الله%20وبركاته" target="_blank">
+                    <img src="assets/imgs/telegram.png" alt="Telegram Icon">
+                    <span>Telegram</span>
+                </a>
+            </button>
+        </div>
+        <br>
+        <div class="contact">
+            <button id="contact-button" class="facebook_button">
+                <a href="https://www.facebook.com/profile.php?id=61570519450230&mibextid=ZbWKwL" target="_blank">
+                    <img src="assets/imgs/facebook.png" alt="Facebook Icon">
+                    <span>Facebook</span>
+                </a>
+            </button>
+            <button id="contact-button" class="email_button">
+                <a href="mailto: mohammedghanamprogrammer@hotmail.com" target="_blank">
+                    <img src="assets/imgs/gmail.png" alt="Gmail Icon">
+                    <span>E-mail</span>
+                </a>
+            </button>
+        </div>
     </div>
-    <br>
-    <div class="contact">
-      <button id="contact-button" class="facebook_button">
-        <a href="https://www.facebook.com/profile.php?id=61570519450230&mibextid=ZbWKwL" target="_blank">
-          <img src="assets/imgs/facebook.png" alt="Facebook Icon">
-          <span>Facebook</span>
-        </a>
-      </button>
-      <button id="contact-button" class="email_button">
-        <a href="mailto: mohammedghanamprogrammer@hotmail.com" target="_blank">
-          <img src="assets/imgs/gmail.png" alt="Gmail Icon">
-          <span>E-mail</span>
-        </a>
-      </button>
-    </div>
-  </div>
-  <footer>
-    <p>&copy; Shining Academy - جميع الحقوق محفوظة لدي أكاديمية الإشراق</p>
-  </footer>
-</body>
-<script src="assets/js/index.js"></script>
+
+    <footer>
+        <p>&copy; Shining Academy - جميع الحقوق محفوظة لدي أكاديمية الإشراق</p>
+    </footer>
+    <script src="assets/js/index.js"></script>
+  </body>
 </html>
