--- a/index.html
+++ b/index.html
@@ -24,14 +24,43 @@
             <p>نحن في أكاديمية الإشراق نعمل على تقديم أفضل الأساليب التعليمية في مجال التعليم، حيث نهدف إلى مساعدة الطلاب على تنمية مهاراتهم التقنية بشكل متميز.</p>
         </section>
     </div>
-    <marquee behavior="" direction="">
-      <div id="moved_studies">
-        <div>
-          <img src="assets/imgs/English.png" alt="English">
-          <p>English</p>
-        </div>
+    <br>
+    <h3>ممكن تذاكر معانا مواد اي؟</h3>
+    <div id="moved_subjects">
+      <br><br>
+      <div class="subject-item">
+        <img src="assets/imgs/arabic_physics.png" alt="مادة الفيزياء">
+        <h1>مادة الفيزياء</h1>
       </div>
-    </marquee>
+      <div class="subject-item">
+        <img src="assets/imgs/arabic_cimistry.png" alt="صورة الكيمياء">
+        <h1>الكيمياء</h1>
+      </div>
+      <div class="subject-item">
+        <img src="assets/imgs/arabic_biology.png" alt="مادة الأحياء">
+        <h1>مادة الأحياء</h1>
+      </div>
+      <div class="subject-item">
+        <img src="assets/imgs/mathimatics.png" alt="مادة الرياضيات">
+        <h1>الرياضيات</h1>
+      </div>
+      <div class="subject-item">
+        <img src="assets/imgs/history.png" alt="مادة التاريخ">
+        <h1>التاريخ</h1>
+      </div>
+      <div class="subject-item">
+        <img src="assets/imgs/arabic_science.png" alt="مادة العلوم / العلوم المتكاملة">
+        <h1>مادة العلوم / العلوم المتكاملة</h1>
+      </div>
+      <div class="subject-item">
+        <img src="assets/imgs/arabic_physics.png" alt="مادة الفيزياء">
+        <h1>الفيزياء</h1>
+      </div>
+      <div class="subject-item">
+        <img src="assets/imgs/English.png" alt="English">
+        <h1>English</h1>
+      </div>
+    </div>
     <div id="contact-section">
         <h3>تواصل معنا</h3>
         <div class="contact">
