--- a/index.html
+++ b/index.html
@@ -105,7 +105,22 @@
             </button>
         </div>
     </div>
-
+    <br><br>
+    <div id="contact_me">
+      <h3>قدم طلب مراسلة</h3>
+      <br>
+      <form id="contactForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" rows="1" placeholder="Mohammed Ghanam" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="example@example.com" required>
+        <label for="whatsapp">WhatsApp Number:</label>
+        <input type="number" id="whatsapp" name="whatsapp" placeholder="ex: 201101023681" required>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" required></textarea>
+        <button type="submit" class="submit_button">Submit</button>
+      </form>
+    </div>
     <footer>
         <p>&copy; Shining Academy - جميع الحقوق محفوظة لدي أكاديمية الإشراق</p>
     </footer>
