--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <nav>
             <ul>
                 <li><a href="#">الرئيسية</a></li>
-                <!-- Add more links here -->
+                <li><a href="#what_2_study">المواد الدراسية</a></li>
+                <li><a href="#contact-section">تواصل معنا</a></li>
+                <li><a href="#contact_me">طلب تواصل</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +27,7 @@
         </section>
     </div>
     <br>
-    <h3>ممكن تذاكر معانا مواد اي؟</h3>
+    <h3 id="what_2_study">ممكن تذاكر معانا مواد اي؟</h3>
     <br><br>
     <div id="moved_subjects">
       <div class="subject-item">
