--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <button type="submit" class="submit_button">Submit</button>
       </form>
     </div>
+    <div class="acadmy_float_logo"></div>
     <footer>
         <p>&copy; Shining Academy - جميع الحقوق محفوظة لدي أكاديمية الإشراق</p>
     </footer>
