--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="example@example.com" required>
         <label for="whatsapp">WhatsApp Number:</label>
-        <input type="number" id="whatsapp" name="whatsapp" placeholder="ex: 201101023681" required>
+        <input type="number" id="whatsapp" name="whatsapp" placeholder="ex: 201101023681" minlength="" required>
         <label for="message">Message:</label>
         <textarea id="message" name="message" required></textarea>
         <button type="submit" class="submit_button">Submit</button>
