--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </a>
             </button>
             <button id="contact-button" class="email_button">
-                <a href="mailto: mohammedghanamprogrammer@hotmail.com" target="_blank">
+                <a href="mailto: shiningacadmy@gmail.com" target="_blank">
                     <img src="assets/imgs/gmail.png" alt="Gmail Icon">
                     <span>E-mail</span>
                 </a>
