--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
       <br>
       <form id="contactForm">
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" rows="1" placeholder="Mohammed Ghanam" required>
+        <input type="text" id="name" name="name" rows="1" placeholder="Mohammed Ghanam" min="10" required>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="example@example.com" required>
         <label for="whatsapp">WhatsApp Number:</label>
-        <input type="number" id="whatsapp" name="whatsapp" placeholder="ex: 201101023681" minlength="8" required>
+        <input type="number" id="whatsapp" name="whatsapp" placeholder="ex: 201101023681" min="8" required>
         <label for="message">Message:</label>
         <textarea id="message" name="message" required></textarea>
         <button type="submit" class="submit_button">Submit</button>
