--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/imgs/acadmy_logo.jpg"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self';">
     <title>Shining Academy - أكاديمية الإشراق</title>
     <link rel="stylesheet" href="assets/css/index.css">
   </head>
