--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#contact-section">تواصل معنا</a></li>
                 <li><a href="#what_2_study">المواد الدراسية</a></li>
                 <li><a href="#">الرئيسية</a></li>
+                <li><a href="https://forms.gle/i2Fw5yKqcxQjQmEV6" target="_blank">قدم كمعلم</a></li>
             </ul>
         </nav>
     </header>
