--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <img src="assets/imgs/acadmy_logo.jpg" alt="Shining Academy" width="5%">
         <nav>
             <ul>
-                <li><a href="#contact_me">طلب تواصل</a></li>
-                <li><a href="#contact-section">تواصل معنا</a></li>
-                <li><a href="#what_2_study">المواد الدراسية</a></li>
-                <li><a href="#">الرئيسية</a></li>
-                <li><a href="https://forms.gle/i2Fw5yKqcxQjQmEV6" target="_blank">قدم كمعلم</a></li>
+              <li><a href="https://forms.gle/9GpKAFEqUyxmTS6E9" target="_blank">قدم كطالب</a></li>
+              <li><a href="https://forms.gle/i2Fw5yKqcxQjQmEV6" target="_blank">قدم كمعلم</a></li>
+              <li><a href="#contact_me">طلب تواصل</a></li>
+              <li><a href="#contact-section">تواصل معنا</a></li>
+              <li><a href="#what_2_study">المواد الدراسية</a></li>
+              <li><a href="#">الرئيسية</a></li>
             </ul>
         </nav>
     </header>
