--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
   </head>
   <body>
     <header>
-        <img src="assets/imgs/acadmy_logo.jpg" alt="Shining Academy" width="5%">
-        <nav>
-            <ul>
-              <li><a href="https://forms.gle/9GpKAFEqUyxmTS6E9" target="_blank">قدم كطالب</a></li>
-              <li><a href="https://forms.gle/i2Fw5yKqcxQjQmEV6" target="_blank">قدم كمعلم</a></li>
-              <li><a href="#contact_me">طلب تواصل</a></li>
-              <li><a href="#contact-section">تواصل معنا</a></li>
-              <li><a href="#what_2_study">المواد الدراسية</a></li>
-              <li><a href="#">الرئيسية</a></li>
-            </ul>
-        </nav>
-    </header>
-
+  <img src="assets/imgs/acadmy_logo.jpg" alt="Shining Academy">
+  <div class="menu-container">
+    <div class="menu-row">
+      <a href="https://forms.gle/9GpKAFEqUyxmTS6E9" target="_blank">قدم كطالب</a>
+      <a href="https://forms.gle/i2Fw5yKqcxQjQmEV6" target="_blank">قدم كمعلم</a>
+      <a href="#contact_me">طلب تواصل</a>
+    </div>
+    <hr>
+    <div class="menu-row">
+      <a href="#contact-section">تواصل معنا</a>
+      <a href="#what_2_study">المواد الدراسية</a>
+      <a href="#">الرئيسية</a>
+    </div>
+  </div>
+</header>
     <div class="home">
         <section id="home">
             <h1>مرحبًا بك في أكاديمية الإشراق</h1>
