--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
   <img src="assets/imgs/acadmy_logo.jpg" alt="Shining Academy">
   <div class="menu-container">
     <div class="menu-row">
-      <a href="https://forms.gle/9GpKAFEqUyxmTS6E9" target="_blank">قدم كطالب</a>
-      <a href="https://forms.gle/i2Fw5yKqcxQjQmEV6" target="_blank">قدم كمعلم</a>
-      <a href="#contact_me">طلب تواصل</a>
-    </div>
-    <hr>
-    <div class="menu-row">
       <a href="#contact-section">تواصل معنا</a>
       <a href="#what_2_study">المواد الدراسية</a>
       <a href="#">الرئيسية</a>
+    </div>
+    <hr />
+    <div class="menu-container">
+    <div class="menu-row">
+      <a href="https://forms.gle/9GpKAFEqUyxmTS6E9" target="_blank">قدم كطالب</a>
+      <a href="https://forms.gle/i2Fw5yKqcxQjQmEV6" target="_blank">قدم كمعلم</a>
+      <a href="#contact_me">طلب تواصل</a>
     </div>
   </div>
 </header>
@@ -154,7 +155,7 @@
     <div id="contact_me">
       <h3>قدم طلب مراسلة / تسجيل</h3>
       <br>
-      <form id="contactForm">
+      <form action="https://formspree.io/f/mjkkqybq" method="POST" id="contactForm">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" rows="1" placeholder="Mohammed Ghanam" min="10" required>
         <label for="email">Email:</label>
